DP-3T bibtex citations

--- a/insider.bib
+++ b/insider.bib
@@ -3827,3 +3827,23 @@ title = {Die Corona-Warn-App: Unterst\"utzt uns im Kampf gegen Corona},
 note = {German government announcement and support of Coronavirus warning app},
 year = {2020}
 }
+
+@misc{dp3t:wp,
+author = {DP-3T},
+title = {Decentralized Privacy-Preserving Proximity Tracing - {White Paper}},
+year = 2020,
+version = {25 May 2020},
+note = {https://github.com/DP-3T/documents/blob/master/DP3T White Paper.pdf}
+}
+@misc{dp3t:impl,
+author = {DP-3T},
+title = {{README: Apple / Google Exposure Notification}},
+year = 2020,
+note = {https://github.com/DP-3T/documents}
+}
+@misc{dp3t:github,
+author = {DP-3T},
+title = {{Decentralized Privacy-Preserving Proximity Tracing}},
+year = 2020,
+note = {https://github.com/DP-3T}
+}
