insider.bib completed and most of the TODOs fixed

--- a/insider.bib
+++ b/insider.bib
@@ -3823,10 +3823,12 @@ year = {2018}
 }
 @misc{bundes:20,
 author = {Die Bundesregierung},
-title = {Die Corona-Warn-App: Unterst\"utzt uns im Kampf gegen Corona},
+title = {{Die Corona-Warn-App: Unterst\"utzt uns im Kampf gegen Corona}},
 note = {German government announcement and support of Coronavirus warning app},
 year = {2020}
 }
+
+
 
 @misc{dp3t:wp,
 author = {DP-3T},
@@ -3835,15 +3837,44 @@ year = 2020,
 version = {25 May 2020},
 note = {https://github.com/DP-3T/documents/blob/master/DP3T White Paper.pdf}
 }
+
 @misc{dp3t:impl,
 author = {DP-3T},
 title = {{README: Apple / Google Exposure Notification}},
 year = 2020,
 note = {https://github.com/DP-3T/documents}
 }
+
 @misc{dp3t:github,
 author = {DP-3T},
 title = {{Decentralized Privacy-Preserving Proximity Tracing}},
 year = 2020,
 note = {https://github.com/DP-3T}
+}
+
+@misc{pepppt:ROBERT,
+author = {ROBERT},
+title = {{ROBust and privacy-presERving proximity Tracing protocol}},
+year = 2020,
+note = {https://github.com/ROBERT-proximity-tracing}
+}
+
+@misc{pepppt:github,
+author = {PEPP-PT},
+title = {{Pan-European Privacy-Preserving Proximity Tracing}},
+year = 2020,
+note = {https://github.com/PEPP-PT}
+}
+
+@misc{cwa:github,
+author = {Corona-Warn-App},
+year = 2020,
+note = {{https://github.com/corona-warn-app/cwa-documentation/blob/master/solution\_architecture.md}}
+}
+
+@misc{cwa:arch,
+author = {Corona-Warn-App},
+title = {Corona-Warn-App Solution Architecture},
+year = 2020,
+note = {{https://github.com/corona-warn-app/cwa-documentation/blob/master/solution\_architecture.md}}
 }
