--- a/insider.bib
+++ b/insider.bib
@@ -3831,7 +3831,7 @@ year = {2020}
 
 
 @misc{dp3t:wp,
-author = {DP-3T},
+author = {{The DP-3T Project}},
 title = {Decentralized Privacy-Preserving Proximity Tracing - {White Paper}},
 year = 2020,
 version = {25 May 2020},
@@ -3839,42 +3839,77 @@ note = {https://github.com/DP-3T/documents/blob/master/DP3T White Paper.pdf}
 }
 
 @misc{dp3t:impl,
-author = {DP-3T},
+author = {{The DP-3T Project}},
 title = {{README: Apple / Google Exposure Notification}},
 year = 2020,
 note = {https://github.com/DP-3T/documents}
 }
 
+@misc{dp3t:psre,
+author = {{The DP-3T Project}},
+title = {Privacy and Security Risk Evaluation of Digital Proximity Tracing Systems},
+year = 2020,
+note = {{https://github.com/DP-3T/documents/blob/master/Security analysis/Privacy and Security Attacks on Digital Proximity Tracing Systems.pdf}}
+}
+
 @misc{dp3t:github,
-author = {DP-3T},
+author = {{The DP-3T Project}},
 title = {{Decentralized Privacy-Preserving Proximity Tracing}},
 year = 2020,
 note = {https://github.com/DP-3T}
 }
 
 @misc{pepppt:ROBERT,
-author = {ROBERT},
+author = {{The ROBERT Project}},
 title = {{ROBust and privacy-presERving proximity Tracing protocol}},
 year = 2020,
 note = {https://github.com/ROBERT-proximity-tracing}
 }
 
 @misc{pepppt:github,
-author = {PEPP-PT},
+author = {{The PEPP-PT Project}},
 title = {{Pan-European Privacy-Preserving Proximity Tracing}},
 year = 2020,
 note = {https://github.com/PEPP-PT}
 }
 
 @misc{cwa:github,
-author = {Corona-Warn-App},
+author = {{The Corona-Warn-App Project}},
+year = 2020,
+note = {{https://github.com/corona-warn-app}}
+}
+
+@misc{cwa:arch,
+author = {{The Corona-Warn-App Project}},
+title = {Corona-Warn-App Solution Architecture},
 year = 2020,
 note = {{https://github.com/corona-warn-app/cwa-documentation/blob/master/solution\_architecture.md}}
 }
 
-@misc{cwa:arch,
-author = {Corona-Warn-App},
-title = {Corona-Warn-App Solution Architecture},
+@misc{pepppt:dp3tana,
+author = {Serge Vaudenay},
+title = {{Analysis of DP3T: Between Scylla and Charybdis}},
 year = 2020,
-note = {{https://github.com/corona-warn-app/cwa-documentation/blob/master/solution\_architecture.md}}
+note = {{https://eprint.iacr.org/2020/399.pdf}}
+}
+@misc{pepppt:dp3tresp,
+author = {{The DP-3T Project}},
+title = {Response to {'Analysis of DP3T: Between Scylla and Charybdis'}},
+year = 2020,
+note = {{https://eprint.iacr.org/2020/399.pdf}}
+}
+
+@misc{enf:bluetooth,
+author = {{Apple and Google}},
+title = {Exposure Notification: Bluetooth Specification},
+year = 2020,
+note = {{https://blog.google/documents/70/Exposure\_Notification\_-\_Bluetooth\_Specification\_v1.2.2.pdf}},
+version = {v1.2}
+}
+
+@misc{enf:proj,
+author = {{Apple and Google}},
+title = {Exposure Notification Framework},
+year = 2020,
+note = {{https://www.google.com/covid19/exposurenotifications/}}
 }
