paper, techn. part: minor fix (consistent spelling of Ephemeral Id)

--- a/paper.tex
+++ b/paper.tex
@@ -358,7 +358,7 @@ her in the stepwise system refinements.
 \subsubsection{Instantiation of Framework}
 The formal model of the Corona-warning app uses the Isabelle Infrastructure framework instantiating it
 by reusing its concept of {\it actors} for users and smartphones whereby locations correspond
-to physical locations. The Ephemeral IDs, their sending and change is added to Infrastructures
+to physical locations. The Ephemeral Ids, their sending and change is added to Infrastructures
 by slightly adapting the basic state type of infrastructure graphs and accordingly the semantic rules
 for the actions move, get, and put. The details of the newly adapted Infrastructure are
 presented in Section \ref{sec:model}.
